--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "googlebooks",
+  "name": "mern",
   "version": "1.0.0",
-  "description": "Google books search",
+  "description": "react based google book search",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "author": "",
+  "author": "Jason Horowitz",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
@@ -20,9 +21,24 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.4.22",
-    "react-router-dom": "^5.0.0"
-  }
+    "mongoose": "^5.5.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^2.1.8",
+    "react-toastify": "^5.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TennisSprinterkb/MERN-books.git"
+  },
+  "bugs": {
+    "url": "https://github.com/TennisSprinterkb/MERN-books/issues"
+  },
+  "homepage": "https://github.com/TennisSprinterkb/MERN-books#readme"
 }
