--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,17 @@
 {
   "name": "mern",
   "version": "0.1.0",
-  "description": "Mern Demo",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^2.1.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.1",
+    "react-strap": "0.0.1",
+    "reactstrap": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
