--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern",
+  "name": "googlebooks",
   "version": "1.0.0",
   "description": "react google books",
   "main": "server.js",
